syntax = "proto3";
package v1;
option go_package = "filter-core/api/v1";

import "google/api/annotations.proto";

service Rule {
  rpc AddRule(AddRuleReq) returns (AddRuleResp) {
    option (google.api.http) = {
      post: "/api/v1/core/add_rule",
      body: "*",
    };
  }
  rpc DelRule(DelRuleReq) returns (DelRuleResp) {
    option (google.api.http) = {
      post: "/api/v1/core/del_rule",
      body: "*",
    };
  }
}

message AddRuleReq {
  string name = 1 [json_name = "name"];
  int64 dm_type = 2 [json_name = "dm_type"];
  repeated MatcherParam matcher_param_list = 3 [json_name = "matcher_param_list"];
  repeated string action_id_list = 4 [json_name = "action_id_list"];
}

message MatcherParam {
  string param = 1 [json_name = "param"];
  int64 base_type = 2 [json_name = "base_type"];
  int64 match_mode = 3 [json_name = "match_mode"];
  string value = 4 [json_name = "value"];
}

message AddRuleResp {

}

message DelRuleReq {
  string rule_id = 1 [json_name = "rule_id"];
}

message DelRuleResp {

}